--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -1,24 +1,86 @@
+\chapter{Umweltbelastung}
+Durch das erreichte Stadium der technischen Entwicklung in Industrie, Gewerbe und Landwirtschaft verändert und belastet der Mensch die Umwelt.
+Die Umweltbelastung kann viele Ursachen haben, möglicherweise sind bessere Lösungen nicht umsetzbar oder wirtschaftlich nicht attraktiv.
+Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Gegebenheit unterscheiden.
+Es gibt energetischen Belastungen, wie Strahlen, Lärm und Erschütterungen.
+Es gibt Umweltbelastungen durch feste Stoffe wie Abfälle die durch Bau und Abbruch entstehen, Abfälle aus Produktionen und Abfälle aus der Gewinnung von Bodenschätzen.
+Auch flüssige Stoffe belasten die Umwelt. Sie entstehen durch Chemie Fabriken, Reste von Medikamenten die durch den Urin in das Abwasser gelangen oder durch Umweltkatastrophen bei der Sich das Wasser mit andren Stoffen vermischt.
+Ein Beispiel hierfür könnte ein Erbebben sein, welches ein Atomkraftwerk beschädigt und radioaktives Wasser ausläuft.
+Die größte Umweltbelastung ist aber die gasförmige Verschmutzung, welche die Luft verschmutzt.
+Durch unsachgemäßes Recycling kann eine Luftverschmutzung entstehen.
+Wenn zum Beispiel feste Stoffe verbrannt werden um nicht brennbare Stoffe wieder zu verwerten.
+Das ist der Fall bei Stromkabeln wenn die Isolierung verbrannt wird um das wertvolle Kupfer zu gewinnen.
+Die Luftverschmutzung ist die eine große Ursache für Krankheiten und den vorzeitigen Tod von Menschen.
+Sie kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
+Luftverschmutzung entsteht bei Tierhaltung sowie durch den Einsatz von Pestiziden. 
 
-\chapter{Einleitung der Arbeit}
-!!! Überprüfen ob das richtig ist
-\section{Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt?}
-
-\section{Wie kann autonomes Fahren die negativen Auswirkungen reduzieren?}
+Die Hauptursache sind aber Abgase die bei der Verbrennung von fossilen Kraftstoffen entstehen. 
+Ein großer Träger bei der Verbrennung von fossilen Kraftstoffen sind Kraftfahrzeuge.
 
 
-
-\section{Hypothese}
-!!! Wo muss die Hypothese hin?
-Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus.
-
-\section{Definitionen}
-\subsection{Kraftfahrzeuge}
-
+\section{Was ist ein Kraftfahrzeug?}
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
-\vspace{0.5cm}
 \newline
-\aclp{Kfz} können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
+\section{Fahrzeugklassen}
+Die EU Kommission hat hat hierfür vier Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}
+
+\begin{itemize}
+	\item Klasse M: Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge
+	\item Klasse N: Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge
+	\item Klasse O: Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind
+	\item Klasse S: unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
+\end{itemize}
+
+\subsection{Klasse M}
+In der Klasse M werden Kraftfahrerzegge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
+\newline
+Die Klasse M wird spaltet sich in 3 Unterklassen auf.
+\begin{itemize}
+	\item {Klasse M1}
+	\item {Klasse M2}
+	\item {Klasse M3}
+\end{itemize}
+\subsubsection{Klasse M1}
+Kraftfahrzeuge der Klasse M1 haben über die Eigenschaften der Klasse M noch folgende weitere Eigenschaften:
+\begin{itemize}
+	\item {mehr als 8 Sitzplätze und 1 Platz für den Fahrer}
+	\item {keine Stehplätze}
+	\item {zulässiges Gesamtgewicht von maximal 3,5 \ac{t}}
+\end{itemize}
+
+In der Klasse M1 Kraftfahrzeuge wie Personenkraftwagen(Limousine, Cabrio) und Wohnmobile zu finden.
+
+\subsubsection{Klasse M2}
+Kraftfahrzeuge der Klasse M2 haben über die Eigenschaften der Klasse M noch folgende weitere Eigenschaften:
+\begin{itemize}
+	\item {mehr als 8 Sitzplätze}
+	\item {zulässiges Gesamtgewicht von maximal 5 \ac{t}}
+\end{itemize}
+
+In der Klasse M2 sind Kraftfahrzeuge wie ein Eindecker-Bus bis 5 \ac{t} oder ein Doppeldecker-Bus bis 5 \ac{t} zu finden.
+
+\subsubsection{Klasse M3}
+
+Die dritte Unterklasse der Klasse M ist M3.
+
+Kraftfahrzeuge der Klasse M3 haben über die Eigenschaften der Klasse M noch folgende weitere Eigenschaften:
+\begin{itemize}
+	\item {mehr als 8 Sitzplätze}
+	\item {zulässiges Gesamtgewicht von über 5 \ac{t}}
+\end{itemize}
+
+In der Klasse M3 sind Kraftfahrzeuge wie ein Eindecker-Bus über 5 \ac{t} oder Doppeldecker-Bus über 5\ac{t} zu finden.
+
+\subsection{Klasse N}
+
+\subsection{Klasse O}
+\subsection{Klasse S}
+
+
+\ac{Kfz} können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
 	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
 \begin{itemize}
 	\item Klasse M: Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge
@@ -27,14 +89,22 @@ Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelast
 	\item Klasse S: unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
 \end{itemize}
 
-!!! Welche Auswirkungen haben die Klassen auf die Umwelt?
-!!! Wie groß ist der Anteil der Kraftfahrzeuge in den Klassen?
-\newpage
+
+
+\section{Wie kann autonomes Fahren die negativen Auswirkungen reduzieren?}
+% !!! hier kann man Beispiele aufführen, wie zb Bus, PKW, LKW; Traktor
+% !!! Wie groß ist der Anteil der Kraftfahrzeuge in den Klassen in Deutschland?
+% !!! Warum und wie blesatst jede Klasse die Umwelt?
+% !!! PKW durch unnötige Kurzstecke
+% !!! Sinnloses laufenlassen von LKW
+% !!! Zustellungen von Gütern
+% !!! Leerfahrten
+
 
 \subsection{Autonomes Fahren}
 
 !!! Was sind autonome fahrzeuge?
-!!! Welche Autonom Fahrzeuge gibt es auf die Klassen gesehen?
+!!! Welche 
 
 
 Beim autonomen Fahren, fährt ein \ac{Kfz} Verwaltungsgefäß selbständig.
