--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -6,6 +6,10 @@
 	\acro{Pkw}{\textit{Personenkraftwagen}}
 	\acro{SAE}{\textit{Society of Automotive Engineers}}
 	\acro{GRA}{\textit{Geschwindigkeitsregelanlage}}
+	\acro{kmh}[km/h]{Kilometer pro Stunde}
+	\acro{t}{Tonnen}
+
+
 
 
 	\acro{CO2}[CO\textsubscript{2}]{\textit{Kohlenstoffdioxid}}
