--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -17,11 +17,49 @@ Luftverschmutzung entsteht bei Tierhaltung sowie durch den Einsatz von Pestizide
 Die Hauptursache sind aber Abgase die bei der Verbrennung von fossilen Kraftstoffen entstehen. 
 Ein großer Träger bei der Verbrennung von fossilen Kraftstoffen sind Kraftfahrzeuge.
 
-
-\section{Was ist ein Kraftfahrzeug?}
+\chapter{Kraftfahrzeuge}
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
-\newline
+
+Da Kraftfahrzeuge Landfahrzeuge sind gehören Flugzeuge, Schiffe oder Boote nicht zu der Kategorie, obwohl sie durch Maschinenkraft bewegt werden.
+Auch Züge oder Trambahnen gehören nicht in in die Kategorien, da sie an Bahngleise gebunden sind.
+
+Moderne Kraftfahrzeuge werden aus folgenden Baugruppen gebildet:
+\begin{itemize}
+	\item Antriebseinheit
+	\item Energieübertragungseinheit
+	\item Stütz- und Trageeinheit
+	\item Steuerungs- und Regelungseinheit
+	\item Arbeitseinheit
+\end{itemize}
+
+\subsection{Antriebseinheit}
+Die Antriebseinheit wandelt die zugeführte Energie in die erforderliche Antriebsenergie um.
+\footnote{Westermann S19}
+Diese Umwandlung wird im Motor durchgeführt.
+Hauptsächlich werden Elektro- und Verbrennungsmotoren eingesetzt.
+
+Verbrennungsmotoren unterscheiden sich von Elektromotoren durch ihre Energieerzeugung.
+Die Energieerzeugung wird durch die Verbrennung von Kraftstoff erzeugt.
+Dazu wird ein Kraftstoff Luftgemisch in einem Brennraum mit Kolben zur Verbrennung verwendet.
+Durch die Verbrennung steigt der Druck im Brennraum stark an und bewegt einen Kolben.
+
+
+\subsection{Energieübertragungseinheit}
+Die Energieübertragungseinheit leitet die Energie in der geforderten Bewegungsart und Bewegungsgeschwindigkeit zur Arbeitseinheit weiter.
+\footnote{Westermann S19}
+
+
+\subsection{Stütz- und Trageeinheit}
+\subsection{Steuerungs- und Regelungseinheit}
+\subsection{Arbeitseinheit}
+
+
+
+
+
+
+
 Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
 \section{Fahrzeugklassen}
 Die EU Kommission hat hat hierfür vier Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
