--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -24,7 +24,7 @@ Ein großer Träger bei der Verbrennung von fossilen Kraftstoffen sind Kraftfahr
 Da Kraftfahrzeuge Landfahrzeuge sind gehören Flugzeuge, Schiffe oder Boote nicht zu der Kategorie, obwohl sie durch Maschinenkraft bewegt werden.
 Auch Züge oder Trambahnen gehören nicht in in die Kategorien, da sie an Bahngleise gebunden sind.
 
-Moderne Kraftfahrzeuge werden aus folgenden Baugruppen gebildet:
+Moderne Kraftfahrzeuge werden aus folgenden Teilsysteme gebildet:
 \begin{itemize}
 	\item Antriebseinheit
 	\item Energieübertragungseinheit
@@ -33,9 +33,20 @@ Moderne Kraftfahrzeuge werden aus folgenden Baugruppen gebildet:
 	\item Arbeitseinheit
 \end{itemize}
 
+
+\begin{figure}[h!]
+	\caption{Teilsysteme des Kraftfahrzeugs}
+	\includegraphics[scale=0.1]{assets/figures/Teilsysteme des Kraftfahrzeugs.jpg}
+	\begin{flushleft}
+		Quelle: Westermann S. 19
+	\end{flushleft}
+	\label{fig:birds}
+\end{figure}
+
+
 \subsection{Antriebseinheit}
 Die Antriebseinheit wandelt die zugeführte Energie in die erforderliche Antriebsenergie um.
-\footnote{Westermann S19}
+\footnote{Westermann S. 19}
 Diese Umwandlung wird im Motor durchgeführt.
 Hauptsächlich werden Elektro- und Verbrennungsmotoren eingesetzt.
 
@@ -45,32 +56,75 @@ Dazu wird ein Kraftstoff Luftgemisch in einem Brennraum mit Kolben zur Verbrennu
 Durch die Verbrennung steigt der Druck im Brennraum stark an und bewegt einen Kolben.
 
 
+\subsection{Arbeitseinheit}
+Die Arbeitseinheit ist die Verbindung zwischen den Antriebsrädern und der Fahrbahn.
+Durch die Bewegung der Antriebsrädern wird das Kraftfahrzeug in Bewegung gesetzt.
+
 \subsection{Energieübertragungseinheit}
 Die Energieübertragungseinheit leitet die Energie in der geforderten Bewegungsart und Bewegungsgeschwindigkeit zur Arbeitseinheit weiter.
-\footnote{Westermann S19}
+\footnote{Westermann S. 19}
+
+Energieübertragungseinheiten sind Baugruppen einer Maschine, die zur Übertragung von Energie in benötigt werden. 
+Beispiel hierfür sind Kabel zur die Elektrische Engergie leiten, aber auch Wellen, Zahnräder oder Riemen welche mechanische Energie weiterleiten.
 
 
 \subsection{Stütz- und Trageeinheit}
+Am Kraftfahrzeug ist die Stütz- und Trageeinheit der Rahmen oder oder der selbsttragende Aufbau.
+Diese haben hauptsächlich die Aufgabe, die Teilsysteme aufzunehmen und zu einer Einheit zu verbinden.
+\footnote{Westermann S. 19}
+
+
 \subsection{Steuerungs- und Regelungseinheit}
-\subsection{Arbeitseinheit}
+Die Steuerungs- und Regelungseinheit Beeinflusst die Stoff- und Energieumsetzung durch Informationsverarbeitung
+\footnote{Westermann S. 19}
+
+\subsubsection{Steuerungseinheit}
+Bei der Steuerungseinheit werden verschiedene Eingangsgrößen durch das System ein oder mehrere Ausgangsgrößen erzeugt.
+Beispiele für Steuerungen sind:
+\begin{itemize}
+	\item Klimaanlage: Es wird eine Solltemperatur eingestellt.
+	      Die Klimaanlage kühlt konstant. 
+	      Die Klimaanlage kühlt solange mit dieser eingestellten Temperatur bis sie verändert wird.
+	      Die Umgebungstemperatur wird nicht berücksichtigt.
+	\item Licht: Der Schalter wird betätigt und das Licht wird eingeschaltet.
+	      Das Licht bleibt permanent eingeschaltet.
+	      Das Licht geht erst aus wenn der Schalter ausgeschaltet wird.
+	      Das Umgebungslicht wird nit berücksichtigt.
+\end{itemize}
+\subsubsection{Regelungseinheit}
+Bei einer Regelungseinheit werden die Eingangsgrößen mit einem Sollwert verglichen und so lange angepasst bis der Sollwert erreicht wird.
+Beispiele für Regelungen sind:
+\begin{itemize}
+	\item Klimaautomatik: es wird eine Solltemperatur eingestellt.
+	      Es wird gemessen wie warm oder wie Kalt die Temperatur ist.
+	      Sollte die Temperatur unter der Solltemperatur liegen, wird die Klimaautomatik auf Heizen gestellt.
+	      Sollte die Temperatur über der Solltemperatur liegen, wird die Klimaautomatik auf Kühlen gestellt.
+	\item Lichtautomatik: Es gibt eine Schwelle bei der das Licht eingeschaltet werden soll.
+	      Es gemessen wie hell das Umgebungslicht ist. 
+	      Sollte das Umgebungslicht zu gering sein wie \ac*{zb} im Tunnel oder bei Dämmerung wird das Licht eingeschaltet. 
+	      Sobald das Umgebungslicht wieder hell genug ist \ac*{zb} beim verlassen des Tunnels oder bei Sonnenaufgang, wird das Licht wieder ausgeschaltet.
+\end{itemize}
 
 
-
-
-
-
+\section{Fahrzeugklassen}
 
 Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
-\section{Fahrzeugklassen}
-Die EU Kommission hat hat hierfür vier Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+Die EU Kommission hat hat hierfür aht Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
 	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}
 
 \begin{itemize}
+	\item Klasse L: Leichte ein- und zweispurige Kraftfahrzeuge
 	\item Klasse M: Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge
 	\item Klasse N: Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge
 	\item Klasse O: Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind
 	\item Klasse S: unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
+	\item Klasse R: Anhänger, die in der Land- und Forstwirtschaft verwendet werden
+	\item Klasse S: Maschinen, die in der Land- und Forstwirtschaft zum Einsatz kommen und gezogen werden
+	\item Klasse T: Zugmaschinen, die in der Land- und Forstwirtschaft verwendet werden wie Traktoren
+	\item Klasse C: Zugmaschinen, die in der Land- und Forstwirtschaft verwendet werden und auf Ketten laufen wie ein Bagger
 \end{itemize}
+
+Die relevantesten Klassen sind M und N.
 
 \subsection{Klasse M}
 In der Klasse M werden Kraftfahrerzegge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
@@ -110,22 +164,31 @@ Kraftfahrzeuge der Klasse M3 haben über die Eigenschaften der Klasse M noch fol
 	\item {zulässiges Gesamtgewicht von über 5 \ac{t}}
 \end{itemize}
 
-In der Klasse M3 sind Kraftfahrzeuge wie ein Eindecker-Bus über 5 \ac{t} oder Doppeldecker-Bus über 5\ac{t} zu finden.
+In der Klasse M3 sind Kraftfahrzeuge wie ein Eindecker-Bus über 5 \ac{t} oder Doppeldecker-Bus über 5 \ac{t} zu finden.
 
 \subsection{Klasse N}
-
-\subsection{Klasse O}
-\subsection{Klasse S}
-
-
-\ac{Kfz} können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
-	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
+In der Klasse N werden Kraftfahrerzegge eingeordnet die für die Beförderung von Gütern zuständig sind und mindestens 3 Räder haben sowie ein zulässiges Gesamtgewicht von über 1 \ac{t} haben.
+Die Klasse N spaltet sich in 3 Unterklassen auf.
 \begin{itemize}
-	\item Klasse M: Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge
-	\item Klasse N: Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge
-	\item Klasse O: Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind
-	\item Klasse S: unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
+	\item {Klasse N1}
+	\item {Klasse N2}
+	\item {Klasse N3}
 \end{itemize}
+
+\subsubsection{Klasse N1}
+Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse bis zu 3,5 \ac{t}.
+In der Klasse N1 sind Kraftfahrzeuge die in dicht besiedelten Regionen gut zurecht kommen.
+
+
+\subsubsection{Klasse N2}
+Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von zu 3,5 \ac{t} bis 12 \ac*{t}.
+In der Klasse N2 sind Kraftfahrzeuge die regional Güterbefördern.
+
+
+\subsubsection{KLasse N3}
+Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
+In der Klasse N3 sind Kraftfahrzeuge die überregional Güterbefördern.
+
 
 
 
