--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -55,7 +55,6 @@ Die Energieerzeugung wird durch die Verbrennung von Kraftstoff erzeugt.
 Dazu wird ein Kraftstoff Luftgemisch in einem Brennraum mit Kolben zur Verbrennung verwendet.
 Durch die Verbrennung steigt der Druck im Brennraum stark an und bewegt einen Kolben.
 
-
 \subsection{Arbeitseinheit}
 Die Arbeitseinheit ist die Verbindung zwischen den Antriebsrädern und der Fahrbahn.
 Durch die Bewegung der Antriebsrädern wird das Kraftfahrzeug in Bewegung gesetzt.
@@ -66,7 +65,6 @@ Die Energieübertragungseinheit leitet die Energie in der geforderten Bewegungsa
 
 Energieübertragungseinheiten sind Baugruppen einer Maschine, die zur Übertragung von Energie in benötigt werden. 
 Beispiel hierfür sind Kabel zur die Elektrische Engergie leiten, aber auch Wellen, Zahnräder oder Riemen welche mechanische Energie weiterleiten.
-
 
 \subsection{Stütz- und Trageeinheit}
 Am Kraftfahrzeug ist die Stütz- und Trageeinheit der Rahmen oder oder der selbsttragende Aufbau.
@@ -109,7 +107,7 @@ Beispiele für Regelungen sind:
 \section{Fahrzeugklassen}
 
 Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
-Die EU Kommission hat hat hierfür aht Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+Die EU Kommission hat hat hierfür acht Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
 	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}
 
 \begin{itemize}
@@ -138,7 +136,7 @@ Die Klasse M wird spaltet sich in 3 Unterklassen auf.
 \subsubsection{Klasse M1}
 Kraftfahrzeuge der Klasse M1 haben über die Eigenschaften der Klasse M noch folgende weitere Eigenschaften:
 \begin{itemize}
-	\item {mehr als 8 Sitzplätze und 1 Platz für den Fahrer}
+	\item {nicht mehr als 8 Sitzplätze und 1 Platz für den Fahrer}
 	\item {keine Stehplätze}
 	\item {zulässiges Gesamtgewicht von maximal 3,5 \ac{t}}
 \end{itemize}
@@ -177,18 +175,45 @@ Die Klasse N spaltet sich in 3 Unterklassen auf.
 
 \subsubsection{Klasse N1}
 Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse bis zu 3,5 \ac{t}.
-In der Klasse N1 sind Kraftfahrzeuge die in dicht besiedelten Regionen gut zurecht kommen.
+In der Klasse N1 sind Kraftfahrzeuge die in dicht besiedelten Regionen gut zurecht kommen, wie Paketzusteller oder Fahrzeuge der Post.
 
 
 \subsubsection{Klasse N2}
 Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von zu 3,5 \ac{t} bis 12 \ac*{t}.
-In der Klasse N2 sind Kraftfahrzeuge die regional Güterbefördern.
+In der Klasse N2 sind Kraftfahrzeuge die regional Güterbefördern, dies könnten Kraftfahrzeuge die Waren aus einem Zentrallager in die Filialen transportieren. 
+Diese Kraftfahrzeuge sind darauf ausgelegt hunderte Kilometer zurückzulegen.
 
 
 \subsubsection{KLasse N3}
 Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
-In der Klasse N3 sind Kraftfahrzeuge die überregional Güterbefördern.
+In der Klasse N3 sind Kraftfahrzeuge die überregional Güterbefördern, wie ein Kraftfahrzeug das große Mengen an Ladung fassen kann und darauf ausgelegt sind tausende Kilometer zurückzulegen.
 
+\section{Umweltbelastungen von Kraftfahrzeugen}
+Kraftfahrzeuge belasten die Umwelt auf verschiedene Arten. Hierunter fallen 
+die Erzeugung von Rohstoffen für Materialien die für die Produktion von Kraftfahrzeugen benötigt werden, 
+die tatsächliche Produktion von Kraftfahrzeugen,
+der Betrieb von Kraftfahrzeugen,
+sowie die Entsorgung von Kraftfahrzeugen.
+
+Gerade aber der Betrieb von Kraftfahrzeugen belastet die Umwelt durch die verschieden Arten von Schadstoffen.
+Unterschieden wird durch die Verbrennung von Kraftstoff freigesetzten Schadstoffe in Form von Verbrennungsabgasen aber auch durch Partikel die durch den Abrieb der Reifen oder Bremsbeläge freigesetzt werden.
+Aber auch die Infrastruktur belastet die Umwelt.
+
+\subsection{Verbrennungsabgase}
+Die größten Anteile der giftigen Schadstoffe die durch die Verbrennung von Kraftstoff entstehen sind:
+\begin{itemize}
+	\item {\ac{CO}}
+	\item {\ac{NO}}
+	\item unverbrannte Kohlenwasserstoffe (HC)
+	\item Feinstaub
+\end{itemize}
+Es gibt auch ungiftige Stoffe die durch die Verbrennung erzeugt werden wie z.B. Wasser, \ac{CO2}.
+Die durch die Verbrennung entstehenden Abgase werden in einer Abgasanlage in die Umwelt geleitet.
+In der Abgasanlage werden auch gifte Gase im Rahmen des technisch Möglichen aufspalten und umgewandelt um den negativen Einfluss zu verringern.
+
+\subsection{Abrieb}
+
+\subsection{Infrastruktur}
 
 
 
