--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -9,14 +9,16 @@
 	\acro{kmh}[km/h]{Kilometer pro Stunde}
 	\acro{t}{Tonnen}
 
+	\acro{NO}{Stickoxide}
+	\acro{NOX}[NO\textsubscript{X}]{Stickstoffoxide}
 
 
 
-	\acro{CO2}[CO\textsubscript{2}]{\textit{Kohlenstoffdioxid}}
-	\acro{CO}{\textit{Kohlenmonoxid}}
+	\acro{CO2}[CO\textsubscript{2}]{Kohlenstoffdioxid}
+	\acro{CO}{Kohlenmonoxid}
+	\acro{HC}{Hydrocarbon}
 
-	\acro{NO}{\textit{Stickstoffmonoxid}}
-	\acro{NOX}[NO\textsubscript{X}]{\textit{Stickstoffoxide}}
+
 
 	\acro{zb}[z.B.]{zum Beispiel}
 	\acro{ua}[u.a.]{unter anderem}
