--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -196,8 +196,10 @@ der Betrieb von Kraftfahrzeugen,
 sowie die Entsorgung von Kraftfahrzeugen.
 
 Gerade aber der Betrieb von Kraftfahrzeugen belastet die Umwelt durch die verschieden Arten von Schadstoffen.
-Unterschieden wird durch die Verbrennung von Kraftstoff freigesetzten Schadstoffe in Form von Verbrennungsabgasen aber auch durch Partikel die durch den Abrieb der Reifen oder Bremsbeläge freigesetzt werden.
-Aber auch die Infrastruktur belastet die Umwelt.
+Unterschieden wird durch die Art der Belastung, 
+giftige Verbrennungsabgase die durch die Verbrennung entstehen, 
+Feinstaub der sowohl durch die Verbrennung und auch durch den Abrieb von Reifen und Bremsen freigesetzt wird
+und die Infrastruktur der Kraftfahrzeuge für Straßen, Parkplätze und andere Einrichtungen.
 
 \subsection{Verbrennungsabgase}
 Die größten Anteile der giftigen Schadstoffe die durch die Verbrennung von Kraftstoff entstehen sind:
@@ -205,13 +207,23 @@ Die größten Anteile der giftigen Schadstoffe die durch die Verbrennung von Kra
 	\item {\ac{CO}}
 	\item {\ac{NO}}
 	\item unverbrannte Kohlenwasserstoffe (HC)
-	\item Feinstaub
 \end{itemize}
-Es gibt auch ungiftige Stoffe die durch die Verbrennung erzeugt werden wie z.B. Wasser, \ac{CO2}.
-Die durch die Verbrennung entstehenden Abgase werden in einer Abgasanlage in die Umwelt geleitet.
-In der Abgasanlage werden auch gifte Gase im Rahmen des technisch Möglichen aufspalten und umgewandelt um den negativen Einfluss zu verringern.
+Es gibt auch ungiftige Stoffe die durch die Verbrennung erzeugt werden wie \ac{zb} Wasser, \ac{CO2}.
+Die Abgase strömen nach der Verbrennung im Verbrennungsraum durch die Abgasanlage in die Umwelt.
+Die Menge der Abgase die durch die Abgasanlage störmen ist von der Größe des Motors sowie dem Lastzustand des Motors abhängig.
 
-\subsection{Abrieb}
+\subsection{Feinstaub}
+Feinstaub ist 
+
+Feinstaub ist mit bloßem Auge unsichtbar; seine Partikel haben einen Durchmesser von weniger als zehn Mikrometer (Tausendstel Millimeter). 
+Er kann natürlichen Ursprungs sein, wird aber auch in Industrie oder Privathaushalten freigesetzt. 
+Beim Straßenverkehr entsteht Feinstaub durch Reifenabrieb, aufgewirbelten Staub und durch Abgase – vor allem aus ungefilterten Dieselfahrzeugen. 
+Feinstaubpartikel können vom Körper nicht gefiltert werden und bis in die Lungenbläschen vordringen. 
+Mögliche Folgen: Atemwegserkrankungen, Herz- und Kreislauferkrankungen.
+
+Vor sieben Jahren hat die EU eine Richtlinie zur Verbesserung der Luftqualität erlassen, wonach die Belastung der Luft mit Feinstaub einen Grenzwert (50 Mikrogramm je Kubikmeter Luft) nur an höchstens 35 Tagen im Jahr überschreiten darf. Um Fahrverbote aussprechen zu können, beschloss die Bundesregierung im Mai 2006 die »Verordnung zur Kennzeichnung emissionsarmer Kraftfahrzeuge« (Plakettenverordnung). Am 1. März 2007 tritt diese in Kraft. Sie regelt bundeseinheitlich die Kennzeichnung von Pkw, Lkw und Bussen mit Plaketten je nach Schadstoffgruppe.
+
+Die Bundesländer müssen Luftreinhaltepläne aufstellen, mit denen auch lokale Verkehrsbeschränkungen angeordnet werden dürfen. Auf Basis dieser Pläne können dann die Kommunen exakt festlegen, welche Straßen oder Regionen in welchem Umfang befahren werden dürfen. Stark feinstaubbelastete Gebiete können – temporär oder auf Dauer – als »Umweltzone« deklariert werden, in der für bestimmte Autos Fahrverbote gelten
 
 \subsection{Infrastruktur}
 
