--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -208,22 +208,43 @@ Die größten Anteile der giftigen Schadstoffe die durch die Verbrennung von Kra
 	\item {\ac{NO}}
 	\item unverbrannte Kohlenwasserstoffe (HC)
 \end{itemize}
-Es gibt auch ungiftige Stoffe die durch die Verbrennung erzeugt werden wie \ac{zb} Wasser, \ac{CO2}.
 Die Abgase strömen nach der Verbrennung im Verbrennungsraum durch die Abgasanlage in die Umwelt.
-Die Menge der Abgase die durch die Abgasanlage störmen ist von der Größe des Motors sowie dem Lastzustand des Motors abhängig.
+Es gibt auch ungiftige Stoffe die durch die Verbrennung abgegeben werden wie \ac{zb} Wasser und \ac{CO2}.
+Die Menge der Abgase die durch die Abgasanlage strömen ist von der Größe des Motors sowie dem Lastzustand des Motors abhängig.
 
 \subsection{Feinstaub}
-Feinstaub ist 
+Feinstaub ist ein fester oder flüssiger Stoff der nicht sofort zu Boden sinkt. Bis der Feinstaub zu Boden sinkt, und we sich Feinstaub verbreitet ist neben der Art des Feinstaubes auch noch die Wetterlage entscheidend.
+Bei Trockenheit kann sich Feinstaub gut ausbreiten und verweilt länger in der Luft, hohe Luftfeuchtigkeit beeinträchtigen die Ausbreitung.
+Feinstäube werden als Particle Matter (PM, zu deutsch Stoffteilchen) bezeichnet. Diese Luftschadstoffe sind gesundheitsschädlich. \footnote{Westermann S. 327}
 
-Feinstaub ist mit bloßem Auge unsichtbar; seine Partikel haben einen Durchmesser von weniger als zehn Mikrometer (Tausendstel Millimeter). 
-Er kann natürlichen Ursprungs sein, wird aber auch in Industrie oder Privathaushalten freigesetzt. 
-Beim Straßenverkehr entsteht Feinstaub durch Reifenabrieb, aufgewirbelten Staub und durch Abgase – vor allem aus ungefilterten Dieselfahrzeugen. 
-Feinstaubpartikel können vom Körper nicht gefiltert werden und bis in die Lungenbläschen vordringen. 
-Mögliche Folgen: Atemwegserkrankungen, Herz- und Kreislauferkrankungen.
+Es wird Unterschieden zwischen Feinstaub der aus natürlichen Quellen entstanden ist und Feinstaub der durch menschliches Handeln entstanden ist.
 
-Vor sieben Jahren hat die EU eine Richtlinie zur Verbesserung der Luftqualität erlassen, wonach die Belastung der Luft mit Feinstaub einen Grenzwert (50 Mikrogramm je Kubikmeter Luft) nur an höchstens 35 Tagen im Jahr überschreiten darf. Um Fahrverbote aussprechen zu können, beschloss die Bundesregierung im Mai 2006 die »Verordnung zur Kennzeichnung emissionsarmer Kraftfahrzeuge« (Plakettenverordnung). Am 1. März 2007 tritt diese in Kraft. Sie regelt bundeseinheitlich die Kennzeichnung von Pkw, Lkw und Bussen mit Plaketten je nach Schadstoffgruppe.
+\subsubsection{Feinstaub aus natürlichen Quellen}
+Natürlich Feinstäube sind ohne das Handeln durch den Menschen entstanden.
+Quellen für natürlichen Feinstaub sind:
+\begin{itemize}
+	\item Vulkane
+	\item Wald- und Buschbrände
+	\item Pollen
+	\item Sporen
+\end{itemize}
 
-Die Bundesländer müssen Luftreinhaltepläne aufstellen, mit denen auch lokale Verkehrsbeschränkungen angeordnet werden dürfen. Auf Basis dieser Pläne können dann die Kommunen exakt festlegen, welche Straßen oder Regionen in welchem Umfang befahren werden dürfen. Stark feinstaubbelastete Gebiete können – temporär oder auf Dauer – als »Umweltzone« deklariert werden, in der für bestimmte Autos Fahrverbote gelten
+
+\subsubsection{Feinstaub durch menschliches Handeln}
+Feinstaub der durch menschliches Handeln entstanden ist wird auch anthropogener Feinstaub genannt.
+Quellen für Feinstaub durch menschliches Handeln sind:
+\begin{itemize}
+	\item vom Straßenverkehr durch Verbrennung und Abrieb
+	\item Verbrennungsabgase von Kraftwerken und Müllverbrennungsanlagen
+	\item Brände von Gebäuden
+	\item Industrieprozesse wie die Stahlerzeugung
+\end{itemize}
+
+Zur Verbesserung der Luftreinhaltung können Kommunen und Städte Umweltzonen einrichten und Fahrverbote festlegen.
+Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Plakette möglich, die man bei der zuständigen Behörde erlangen kann.
+
+
+
 
 \subsection{Infrastruktur}
 
