--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -241,7 +241,7 @@ Quellen für Feinstaub durch menschliches Handeln sind:
 \end{itemize}
 
 Zur Verbesserung der Luftreinhaltung können Kommunen und Städte Umweltzonen einrichten und Fahrverbote festlegen.
-Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Plakette möglich, die man bei der zuständigen Behörde erlangen kann.
+Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Kennzeichnung des Fahrzeuges möglich, die man bei der zuständigen Behörde erlangen kann.
 
 
 
