--- a/template/document.tex
+++ b/template/document.tex
@@ -46,10 +46,8 @@
 \newpage
 
 \input{pagestyle.tex}
-%start
-\input{01_einleitung/einleitung.tex}
-\input{02_hauptteil/hauptteil.tex}
-\input{03_schluss/schluss.tex}
+%Fallstudie
+\input{Fallstudie/Fallstudie.tex}
 %end
 
 %end of document
