--- a/template/Fallstudie/Fallstudie.tex
+++ b/template/Fallstudie/Fallstudie.tex
@@ -10,7 +10,7 @@
 \subsection{Hochautomatisierung}
 \subsection{Vollautomatisierung}
 
-
+\input{Fallstudie/Problemlösung durch Autonomes Fahren/Problemlösung durch Autonomes Fahren.tex}
 
 
 % !!! hier kann man Beispiele aufführen, wie zb Bus, PKW, LKW; Traktor
