--- a/template/Fallstudie/Umweltbelastung/Umweltbelastung.tex
+++ b/template/Fallstudie/Umweltbelastung/Umweltbelastung.tex
@@ -4,7 +4,7 @@ Die Umweltbelastung kann viele Ursachen haben, möglicherweise sind bessere Lös
 Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Gegebenheit unterscheiden.
 Es gibt energetischen Belastungen, wie Strahlen, Lärm und Erschütterungen.
 Es gibt Umweltbelastungen durch feste Stoffe wie Abfälle die durch Bau und Abbruch entstehen, Abfälle aus Produktionen und Abfälle aus der Gewinnung von Bodenschätzen.
-Auch flüssige Stoffe belasten die Umwelt. Sie entstehen durch Chemie Fabriken, Reste von Medikamenten die durch den Urin in das Abwasser gelangen oder durch Umweltkatastrophen bei der Sich das Wasser mit andren Stoffen vermischt.
+Auch flüssige Stoffe belasten die Umwelt. Sie entstehen durch Chemie Fabriken, Reste von Medikamenten die durch den Urin in das Abwasser gelangen oder durch Umweltkatastrophen bei der sich das Wasser mit andren Stoffen vermischt.
 Ein Beispiel hierfür könnte ein Erbebben sein, welches ein Atomkraftwerk beschädigt und radioaktives Wasser ausläuft.
 Die größte Umweltbelastung ist aber die gasförmige Verschmutzung, welche die Luft verschmutzt.
 Durch unsachgemäßes Recycling kann eine Luftverschmutzung entstehen.
