--- a/template/Fallstudie/Umweltbelastung/Umweltbelastung.tex
+++ b/template/Fallstudie/Umweltbelastung/Umweltbelastung.tex
@@ -7,12 +7,14 @@ Es gibt Umweltbelastungen durch feste Stoffe wie Abfälle die durch Bau und Abbr
 Auch flüssige Stoffe belasten die Umwelt. Sie entstehen durch Chemie Fabriken, Reste von Medikamenten die durch den Urin in das Abwasser gelangen oder durch Umweltkatastrophen bei der sich das Wasser mit andren Stoffen vermischt.
 Ein Beispiel hierfür könnte ein Erbebben sein, welches ein Atomkraftwerk beschädigt und radioaktives Wasser ausläuft.
 Die größte Umweltbelastung ist aber die gasförmige Verschmutzung, welche die Luft verschmutzt.
-Durch unsachgemäßes Recycling kann eine Luftverschmutzung entstehen.
-Wenn zum Beispiel feste Stoffe verbrannt werden um nicht brennbare Stoffe wieder zu verwerten.
-Das ist der Fall bei Stromkabeln wenn die Isolierung verbrannt wird um das wertvolle Kupfer zu gewinnen.
-Die Luftverschmutzung ist die eine große Ursache für Krankheiten und den vorzeitigen Tod von Menschen.
+
+Auch durch unsachgemäße Wiederverwertung entstehen Luftverschmutzungen entstehen.
+
+Wie zum Beispiel wenn
+Stromkabel verbrannt werden um das Kupfer von der Isolierung zu trennen.
+Die Luftverschmutzung ist eine von den großen Ursachen für Krankheiten und vorzeitigen Tod von Menschen.
 Sie kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
 Luftverschmutzung entsteht bei Tierhaltung sowie durch den Einsatz von Pestiziden.
 
-Die Hauptursache sind aber Abgase die bei der Verbrennung von fossilen Kraftstoffen entstehen.
+Die Hauptursache sind Abgase die bei der Verbrennung von fossilen Kraftstoffen entstehen.
 Ein großer Träger bei der Verbrennung von fossilen Kraftstoffen sind Kraftfahrzeuge.
