--- a/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex
@@ -1,4 +1,5 @@
 \chapter{Kraftfahrzeuge}
+% ! Zitat
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
 
