--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -27,7 +27,7 @@ Hauptsächlich werden Elektro- und Verbrennungsmotoren eingesetzt.
 
 Verbrennungsmotoren unterscheiden sich von Elektromotoren durch ihre Energieerzeugung.
 Die Energieerzeugung wird durch die Verbrennung von Kraftstoff erzeugt.
-Dazu wird ein Kraftstoff Luftgemisch in einem Brennraum mit Kolben zur Verbrennung verwendet.
+Dazu wird ein Kraftstoff-Luft-Gemisch in einem Brennraum mit Kolben zur Verbrennung verwendet.
 Durch die Verbrennung steigt der Druck im Brennraum stark an und bewegt einen Kolben.
 
 \subsection{Arbeitseinheit}
