--- a/template/Fallstudie/Umweltbelastung/Umweltbelastung.tex
+++ b/template/Fallstudie/Umweltbelastung/Umweltbelastung.tex
@@ -1,5 +1,5 @@
 \chapter{Umweltbelastung}
-Durch das erreichte Stadium der technischen Entwicklung in Industrie, Gewerbe und Landwirtschaft verändert und belastet der Mensch die Umwelt.
+Durch die voranschreitende technischen Entwicklung in Industrie, Gewerbe und Landwirtschaft verändert und belastet der Mensch die Umwelt.
 Die Umweltbelastung kann viele Ursachen haben, möglicherweise sind bessere Lösungen nicht umsetzbar oder wirtschaftlich nicht attraktiv.
 Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Gegebenheit unterscheiden.
 Es gibt energetischen Belastungen, wie Strahlen, Lärm und Erschütterungen.
