--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -39,7 +39,7 @@ Die Energieübertragungseinheit leitet die Energie in der geforderten Bewegungsa
 \footnote{Westermann S. 19}
 
 Energieübertragungseinheiten sind Baugruppen einer Maschine, die zur Übertragung von Energie in benötigt werden.
-Beispiel hierfür sind Kabel zur die Elektrische Engergie leiten, aber auch Wellen, Zahnräder oder Riemen welche mechanische Energie weiterleiten.
+Beispiel hierfür sind Kabel die Elektrische Energie leiten oder Wellen, Zahnräder oder Riemen die mechanische Energie weiterleiten.
 
 \subsection{Stütz- und Trageeinheit}
 Am Kraftfahrzeug ist die Stütz- und Trageeinheit der Rahmen oder oder der selbsttragende Aufbau.
