--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -42,27 +42,26 @@ Energieübertragungseinheiten sind Baugruppen einer Maschine, die zur Übertragu
 Beispiel hierfür sind Kabel die Elektrische Energie leiten oder Wellen, Zahnräder oder Riemen die mechanische Energie weiterleiten.
 
 \subsection{Stütz- und Trageeinheit}
-Am Kraftfahrzeug ist die Stütz- und Trageeinheit der Rahmen oder oder der selbsttragende Aufbau.
-Diese haben hauptsächlich die Aufgabe, die Teilsysteme aufzunehmen und zu einer Einheit zu verbinden.
+Stütz- und Trageeinheit der Rahmen oder der selbsttragende Aufbau des Kraftfahrzeuges haben hauptsächlich die Aufgabe, die Teilsysteme aufzunehmen und zu einer Einheit zu verbinden.
 \footnote{Westermann S. 19}
 
 
 \subsection{Steuerungs- und Regelungseinheit}
-Die Steuerungs- und Regelungseinheit Beeinflusst die Stoff- und Energieumsetzung durch Informationsverarbeitung
+Die Steuerungs- und Regelungseinheit beeinflusst die Stoff- und Energieumsetzung durch Informationsverarbeitung
 \footnote{Westermann S. 19}
 
 \subsubsection{Steuerungseinheit}
-Bei der Steuerungseinheit werden verschiedene Eingangsgrößen durch das System ein oder mehrere Ausgangsgrößen erzeugt.
+Bei der Steuerungseinheit werden verschiedene Eingangsgrößen durch das System in eine oder mehrere Ausgangsgrößen verändert.
 Beispiele für Steuerungen sind:
 \begin{itemize}
 	\item Klimaanlage: Es wird eine Solltemperatur eingestellt.
 	      Die Klimaanlage kühlt konstant.
-	      Die Klimaanlage kühlt solange mit dieser eingestellten Temperatur bis sie verändert wird.
+	      Die Klimaanlage kühlt solange mit dieser eingestellten Temperatur solange sie nicht verändert wird.
 	      Die Umgebungstemperatur wird nicht berücksichtigt.
 	\item Licht: Der Schalter wird betätigt und das Licht wird eingeschaltet.
 	      Das Licht bleibt permanent eingeschaltet.
 	      Das Licht geht erst aus wenn der Schalter ausgeschaltet wird.
-	      Das Umgebungslicht wird nit berücksichtigt.
+	      Das Umgebungslicht wird nicht berücksichtigt.
 \end{itemize}
 \subsubsection{Regelungseinheit}
 Bei einer Regelungseinheit werden die Eingangsgrößen mit einem Sollwert verglichen und so lange angepasst bis der Sollwert erreicht wird.
