--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -1,7 +1,7 @@
 \section{Fahrzeugklassen}
 
 Kraftfahrzeuge können Bauartbedingt in Kategorien eingeordnet werden.
-Die EU Kommission hat hat hierfür acht Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+Die EU Kommission hat hierfür acht Klassen definiert.\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
 	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}
 
 \begin{itemize}
@@ -17,6 +17,7 @@ Die EU Kommission hat hat hierfür acht Klassen definiert.\footnote{VERORDNUNG (
 \end{itemize}
 
 Die relevantesten Klassen sind M und N.
+\vspace{0.5cm}
 
 \subsection{Klasse M}
 In der Klasse M werden Kraftfahrerzegge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
