--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -1,29 +1,32 @@
 \section{Umweltbelastungen durch Kraftfahrzeuge}
-Kraftfahrzeuge belasten die Umwelt auf verschiedene Arten. Hierunter fallen
+Kraftfahrzeuge belasten die Umwelt auf verschiedene Arten.
+Hierunter fallen
 die Erzeugung von Rohstoffen für Materialien die für die Produktion von Kraftfahrzeugen benötigt werden,
 die tatsächliche Produktion von Kraftfahrzeugen,
 der Betrieb von Kraftfahrzeugen,
 sowie die Entsorgung von Kraftfahrzeugen.
 
-Gerade aber der Betrieb von Kraftfahrzeugen belastet die Umwelt durch die verschieden Arten von Schadstoffen.
-Unterschieden wird durch die Art der Belastung,
-giftige Verbrennungsabgase die durch die Verbrennung entstehen,
-Feinstaub der sowohl durch die Verbrennung und auch durch den Abrieb von Reifen und Bremsen freigesetzt wird
-und die Infrastruktur der Kraftfahrzeuge für Straßen, Parkplätze und andere Einrichtungen.
+Gerade der Betrieb von Kraftfahrzeugen belastet die Umwelt durch die verschieden Arten von Schadstoffen.
+Unterschieden wird die Art der Belastung,
+durch die Verbrennung entstandene Abgase,
+Feinstaub der durch die Verbrennung, sowohl auch durch den Abrieb von Reifen und Bremsen freigesetzt wird
+und die Infrastruktur der Straßen, Parkplätze und anderer Einrichtungen.
 
 \subsection{Verbrennungsabgase}
-Die größten Anteile der giftigen Schadstoffe die durch die Verbrennung von Kraftstoff entstehen sind:
+Durch Verbrennung von Kraftstoffen entstehen verschied giftige Schadstoffe:
 \begin{itemize}
 	\item {\ac{CO}}
 	\item {\ac{NO}}
 	\item unverbrannte Kohlenwasserstoffe (HC)
 \end{itemize}
 Die Abgase strömen nach der Verbrennung im Verbrennungsraum durch die Abgasanlage in die Umwelt.
-Es gibt auch ungiftige Stoffe die durch die Verbrennung abgegeben werden wie \ac{zb} Wasser und \ac{CO2}.
+Es gibt auch ungiftige Stoffe die durch die Verbrennung abgegeben werden wie \ac{zb} \ac{Wasser} und \ac{CO2}.
 Die Menge der Abgase die durch die Abgasanlage strömen ist von der Größe des Motors sowie dem Lastzustand des Motors abhängig.
 
 \subsection{Feinstaub}
-Feinstaub ist ein fester oder flüssiger Stoff der nicht sofort zu Boden sinkt. Bis der Feinstaub zu Boden sinkt, und we sich Feinstaub verbreitet ist neben der Art des Feinstaubes auch noch die Wetterlage entscheidend.
+Feinstaub ist ein fester oder flüssiger Stoff der nicht sofort zu Boden sinkt.
+Neben der Art des Feinstaubes ist unter anderem die Wetterlage für die Verbreitung und Absenkung von Feinstaub verantwortlich.
+
 Bei Trockenheit kann sich Feinstaub gut ausbreiten und verweilt länger in der Luft, hohe Luftfeuchtigkeit beeinträchtigen die Ausbreitung.
 Feinstäube werden als Particle Matter (PM, zu deutsch Stoffteilchen) bezeichnet. Diese Luftschadstoffe sind gesundheitsschädlich. \footnote{Westermann S. 327}
 
@@ -59,7 +62,7 @@ Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Kennzeichnun
 \subsection{Infrastruktur}
 Auch die Infrastruktur belastet die Umwelt, indem:
 \begin{itemize}
-	\item Parkplätze Flächen versiegeln
+	\item für Parkplätze werden Flächen versiegeln
 	\item Wälder abgeholzt werden um die Verkehrsanbindung zu verbessern
 	\item Straßen vergrößert werden umd mehr Fahrzeuge zu ermöglichen
 	\item starke Erhitzung durch Sonneneinstrahlung auf dunklen Verkehrswegen
