--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -20,9 +20,9 @@ Die relevantesten Klassen sind M und N.
 \vspace{0.5cm}
 
 \subsection{Klasse M}
-In der Klasse M werden Kraftfahrerzegge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
+In der Klasse M werden Kraftfahrerzeuge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
 \newline
-Die Klasse M wird spaltet sich in 3 Unterklassen auf.
+Die Klasse M spaltet sich in 3 Unterklassen auf:
 \begin{itemize}
 	\item {Klasse M1}
 	\item {Klasse M2}
@@ -36,7 +36,7 @@ Kraftfahrzeuge der Klasse M1 haben über die Eigenschaften der Klasse M noch fol
 	\item {zulässiges Gesamtgewicht von maximal 3,5 \ac{t}}
 \end{itemize}
 
-In der Klasse M1 Kraftfahrzeuge wie Personenkraftwagen(Limousine, Cabrio) und Wohnmobile zu finden.
+In der Klasse M1 sind Kraftfahrzeuge wie Personenkraftwagen(Limousine, Cabrio) und Wohnmobile zu finden.
 
 \subsubsection{Klasse M2}
 Kraftfahrzeuge der Klasse M2 haben über die Eigenschaften der Klasse M noch folgende weitere Eigenschaften:
@@ -60,8 +60,8 @@ Kraftfahrzeuge der Klasse M3 haben über die Eigenschaften der Klasse M noch fol
 In der Klasse M3 sind Kraftfahrzeuge wie ein Eindecker-Bus über 5 \ac{t} oder Doppeldecker-Bus über 5 \ac{t} zu finden.
 
 \subsection{Klasse N}
-In der Klasse N werden Kraftfahrerzegge eingeordnet die für die Beförderung von Gütern zuständig sind und mindestens 3 Räder haben sowie ein zulässiges Gesamtgewicht von über 1 \ac{t} haben.
-Die Klasse N spaltet sich in 3 Unterklassen auf.
+In der Klasse N werden Kraftfahrerzeuge eingeordnet die für die Beförderung von Gütern zuständig sind und mindestens 3 Räder haben sowie ein zulässiges Gesamtgewicht von über 1 \ac{t} haben.
+Die Klasse N spaltet sich in 3 Unterklassen auf:
 \begin{itemize}
 	\item {Klasse N1}
 	\item {Klasse N2}
