--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -13,6 +13,7 @@
 	\acro{NOX}[NO\textsubscript{X}]{Stickstoffoxide}
 
 
+	\acro{Wasser}[H\textsubscript{2}O]{Wasser}
 
 	\acro{CO2}[CO\textsubscript{2}]{Kohlenstoffdioxid}
 	\acro{CO}{Kohlenmonoxid}
